Worked mainly on landing page and setup of pages

--- a/index.html
+++ b/index.html
@@ -61,11 +61,6 @@
         <footer>
 
             <nav class="navbar navbar-expand-lg text-light bg-black ">
-                    <!-- <div class="left">
-                        
-
-                    <div class="center">
-                        <p>Contact</p> -->
                         <div class="container-fluid">
                         <div class="container text-center">
                             <div class="row">
@@ -74,10 +69,10 @@
                     
                               </div>
                               <div class="col">
-                                Second in DOM, unordered
+                                Support
                               </div>
                               <div class="col order-first">
-                                Third in DOM, ordered first
+                                Address
                               </div>
                             </div>
                           </div>
