--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
 </header>
 <main>
     <section id="home">
+        <div class="container-fluid">
         <div class="row d-flex flex-column flex-md-row">
             <div class="img1">
                 <div class="home-text col">
-                    <h1 id="heading" class="lead">The New Wave Of Sound Ready For Your Use</h1>
-                    <p class="p-text text-light col">Producer connect was created for you; the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. BeatStars was built for the person telling their story with music and to find like-minded people to experience it with. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people.</p>
+                    <h1 id="heading-homepage" class="lead">The New Wave Of Sound Ready For Your Use</h1>
+                    <p class="home-p-text text-light col">Welcome to my beat store! This was created for you; the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
+                    this site allows anyone to get all my creations and to hopefully work together in the future.
+                    </p>
 
                 </div>
+            </div>
             </div>
     </section>
 
@@ -78,10 +82,6 @@
                             </div>
                           </div>
                         </div>
-
-
-
-
                     </div>
 
                 </div>
