--- a/Html/admin.html
+++ b/Html/admin.html
@@ -46,6 +46,20 @@
 </header>
 
 <body>
+    <div class="img3"></div>
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Id no</th>
+            <th scope="col">Product</th>
+            <th scope="col">Type</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
 
     <script src="/JS/code.js"></script>
 </body>
