--- a/Html/product.html
+++ b/Html/product.html
@@ -52,7 +52,7 @@
                 <div class="img2">
                     <div class="home-text col">
                         <h2 id="heading-productpage" class="lead">Explore My Beat Store</h2>
-                        <p class="product-p-text text-light col">From Various Beat Types To Collections Of Kits To Help You Create Your Own Sound!
+                        <p class="product-p-text col">From Various Beat Types To Collections Of Kits To Help You Create Your Own Sound!
                 </div>
             </div>
         </div>
@@ -63,11 +63,12 @@
                 <div class="card-body">
                     <h5 class="card-title">Juice Wrld Type Beats</h5>
                     <p class="card-text">
-                        This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
                     </p>
-                    <p class="card-text">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                    <p class="card-btn">
+                            <button id="submit">Add to checkout</button>
+                            <button id="display">Display</button>
+
+                            
                     </p>
                 </div>
             </div>
@@ -87,7 +88,9 @@
                 <img src="/Assets/Imgs/Iann doir type beat.jpg" class="card-img-top"
                     alt="Iann doir img" />
                 <div class="card-body">
-                    <h5 class="card-title">Iann Doir Type Beats</h5>
+                    <h5 class="card-title">Iann Doir Type Beats
+
+                    </h5>
                     <p class="card-text">
                         This is a wider card with supporting text below as a natural lead-in to
                         additional content. This card has even longer content than the first to show
@@ -100,9 +103,11 @@
             </div>
         </div>
         </div>
+
+        
     </section>
 
-
+<script src="/JS/code.js"></script>
 </body>
 
 </html>
