--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>My POS Project</title>
 </head>
 <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black .bg-transparent ">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
                 <img class="logo" src="https://i.postimg.cc/Ss5Px6Xq/Logo-2.jpg" alt="logo" width="60" height="55">
@@ -51,7 +51,7 @@
             <div class="img1">
                 <div class="home-text col">
                     <h1 id="heading-homepage" class="lead">The New Wave Of Sound Ready For Your Use</h1>
-                    <p class="home-p-text text-light col">Welcome to my beat store! This was created for you; the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
+                    <p class="home-p-text col">Welcome to my beat store! This was created for you; the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
                     this site allows anyone to get all my creations and to hopefully work together in the future.
                     </p>
 
