fixed images (most) need to do sorting and filtering

--- a/Html/admin.html
+++ b/Html/admin.html
@@ -30,6 +30,9 @@
                         <a class="nav-link active" aria-current="admin-nav" href="/index.html">
                             <i class="fa-sharp fa-solid fa-folder"></i>Home</a>
                     </li>
+                    <a class="nav-link active" aria-current="admin-nav" href="/Html/product.html">
+                        <i class="fa-sharp fa-solid fa-folder"></i>Products</a>
+                    </li>
                         <a class="nav-link active" aria-current="admin-nav" href="/Html/admin.html">
                         <i class="fa-sharp fa-solid fa-folder"></i>Admin</a>
                     </li>
