--- a/Html/checkout.html
+++ b/Html/checkout.html
@@ -27,16 +27,17 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
 
-                        <a class="nav-link active" aria-current="checkout-nav" href="/index.html">
+                        <a class="nav-link active" aria-current="admin-nav" href="/index.html">
                             <i class="fa-sharp fa-solid fa-folder"></i>Home</a>
-
                     </li>
-                        <a class="nav-link active" aria-current="product-nav" href="/Html/product.html"> <i
-                        class="fa-sharp fa-solid fa-house-user"></i> Products</a></i>
-                        
+                    <a class="nav-link active" aria-current="admin-nav" href="/Html/product.html">
+                        <i class="fa-sharp fa-solid fa-folder"></i>Products</a>
                     </li>
                         <a class="nav-link active" aria-current="admin-nav" href="/Html/admin.html">
                         <i class="fa-sharp fa-solid fa-folder"></i>Admin</a>
+                    </li>
+                        <a class="nav-link active" aria-current="checkout-nav" href="/Html/checkout.html">
+                        <i class="fa-sharp fa-solid fa-folder"></i>Checkout</a>
                        
                     </li>
                         <li class="nav-item">
