--- a/Html/admin.html
+++ b/Html/admin.html
@@ -57,6 +57,7 @@
             <th scope="col">Product</th>
             <th scope="col">Type</th>
             <th scope="col">Price</th>
+            <th scope="col">Configure</th>
           </tr>
         </thead>
         <tbody>
