--- a/Html/product.html
+++ b/Html/product.html
@@ -64,7 +64,7 @@
             <!-- Beats -->
             <div id="card">
                 <div class="row" id="card-row" >
-                    <div class="col-4 w-100 bg-danger ">
+                    <div class="col-4 w-100 ">
 
                     </div>
                 </div>
