--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        
+
                         <a class="nav-link active" aria-current="admin-nav" href="/index.html">
                             <i class="fa-sharp fa-solid fa-folder"></i>Home</a>
                     </li>
@@ -79,7 +79,10 @@
                     
                               </div>
                               <div class="col">
-                                Support
+                                Reach-out <br>
+                                <a class="btn text-white" style="background-color: #ed302f;" href="https://www.youtube.com/channel/UC13tr7mMjdQfZRaoI0rbTgQ" role="button">
+                                    <i class="fab fa-youtube"></i>
+                                  </a>
                               </div>
                               <div class="col order-first">
                                 Address
@@ -98,4 +101,3 @@
 
 </html>
 
-<img src=">
