--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                               </div>
                               <div class="col">
                                 Reach-out <br>
-                                <a class="btn text-white" style="background-color: #ed302f;" href="https://www.youtube.com/channel/UC13tr7mMjdQfZRaoI0rbTgQ" role="button">
+                                <!-- <a class="btn text-white" style="background-color: #ed302f;" href="https://www.youtube.com/channel/UC13tr7mMjdQfZRaoI0rbTgQ" role="button"> -->
                                     <i class="fab fa-youtube"></i>
                                   </a>
                               </div>
