updated audio on all cards worked on checkout page set up

--- a/Html/checkout.html
+++ b/Html/checkout.html
@@ -48,11 +48,20 @@
         </div>
 </header>
 
-<body>
+    <body class="bg-dark">
+        <section id="products">
+            <div class="container-fluid">
+                <div class="row d-flex flex-column flex-md-row">
+                    <div class="img3">
+                        <div class="home-text col">
+                            <h2 id="heading-checkoutpage" class="lead">Checkout</h2>
+                            <h3 class="subheading-checkoutpage">Your Beat, Your Story</h3>
+                        </div>
+                    </div>
+                </div>
 
     <script src="/JS/code.js"></script>
 </body>
 
 </html>
 
-<audio src="/"></audio>
