updated products page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="img1">
                 <div class="home-text col">
                     <h1 id="heading-homepage" class="lead">The New Wave Of Sound Ready For Your Use</h1>
-                    <p class="home-p-text col">Welcome to my beat store! This was created for you; the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
+                    <p class="home-p-text col">Welcome to my beat store! This was created for you are the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
                     this site allows anyone to get all my creations and to hopefully work together in the future.
                     </p>
 
@@ -79,13 +79,18 @@
                     
                               </div>
                               <div class="col">
-                                Reach-out <br>
-                                <!-- <a class="btn text-white" style="background-color: #ed302f;" href="https://www.youtube.com/channel/UC13tr7mMjdQfZRaoI0rbTgQ" role="button"> -->
+                                <h4>Support</h4><br>
+                                <p>
+
+                                </p>
                                     <i class="fab fa-youtube"></i>
                                   </a>
                               </div>
                               <div class="col order-first">
-                                Address
+                                <h4>Address :</h4>
+                                <p>South Africa<br>
+                                Cape Town<br>
+                                Lansdowne</p>
                               </div>
                             </div>
                           </div>
