--- a/Html/admin.html
+++ b/Html/admin.html
@@ -53,6 +53,7 @@
         <thead>
           <tr>
             <th scope="col">Id no</th>
+            <th scopw="col">Style</th>
             <th scope="col">Product</th>
             <th scope="col">Type</th>
             <th scope="col">Price</th>
@@ -64,7 +65,7 @@
         </tbody>
       </table>
 
-    <script src="/JS/code.js"></script>
+    <script src="/JS/Admin.js"></script>
 </body>
 
 </html>
