--- a/Html/product.html
+++ b/Html/product.html
@@ -52,7 +52,7 @@
     <section id="products">
         <div class="container-fluid">
             <div class="row d-flex flex-column flex-md-row">
-                <div class="img2">
+                <div loading="lazy" class="img2">
                     <div class="home-text col">
                         <h2 id="heading-productpage" class="lead">Explore My Beat Store</h2>
                         <p class="product-p-text col">From Various Beat Types To Collections Of Kits To Help You Create
