--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="home">
         <div class="container-fluid">
         <div class="row d-flex flex-column flex-md-row">
-            <div class="img1">
+            <div loading="lazy" class="img1">
                 <div class="home-text col">
                     <h1 id="heading-homepage" class="lead">The New Wave Of Sound Ready For Your Use</h1>
                     <p class="home-p-text col">Welcome to my beat store! This was created for you are the writer, the performer, the beat maker, the producer, the engineer, the record label, the publisher, the videographer, the artist and the CREATOR. Music is the universal language that connects us across the globe. Music brings out our human emotions and music is the unified voice of the people and 
