--- a/Html/checkout.html
+++ b/Html/checkout.html
@@ -52,13 +52,24 @@
         <section id="products">
             <div class="container-fluid">
                 <div class="row d-flex flex-column flex-md-row">
-                    <div class="img3">
+                    <div loading="lazy" class="img3">
                         <div class="home-text col">
                             <h2 id="heading-checkoutpage" class="lead">Checkout</h2>
                             <h3 class="subheading-checkoutpage">Your Beat, Your Story</h3>
                         </div>
                     </div>
                 </div>
+
+                <form>
+  <div class="form-group">
+    <label for="formGroupExampleInput">Example label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Another label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+  </div>
+</form>
 
     <script src="/JS/code.js"></script>
 </body>
