--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
     </section>
 
-    <body>
+    <body class="bg-black">
 
         <script src="/JS/code.js"></script>
         <footer>
@@ -79,15 +79,18 @@
                     
                               </div>
                               <div class="col">
-                                <h4>Support</h4><br>
+                                <h4>Contact :</h4><br>
                                 <p>
+                                    brogybeatstore@gmail.com<br>
+                                    Phone no. : 1234567890
+
 
                                 </p>
                                     <i class="fab fa-youtube"></i>
                                   </a>
                               </div>
                               <div class="col order-first">
-                                <h4>Address :</h4>
+                                <h4>Address :</h4><br>
                                 <p>South Africa<br>
                                 Cape Town<br>
                                 Lansdowne</p>
