--- a/Html/admin.html
+++ b/Html/admin.html
@@ -65,6 +65,42 @@
         </tbody>
       </table>
 
+      <footer>
+
+        <nav class="navbar navbar-expand-lg text-light bg-black ">
+                    <div class="container-fluid">
+                    <div class="container text-center">
+                        <div class="row">
+                          <div class="col order-last " >
+                          <p>&copy; Copyright 2022 | All Rights Reserved.</p><br>
+                
+                          </div>
+                          <div class="col">
+                            <h4>Contact :</h4><br>
+                            <p>
+                                brogybeatstore@gmail.com<br>
+                                Phone no. : 1234567890
+
+
+                            </p>
+                                <i class="fab fa-youtube"></i>
+                              </a>
+                          </div>
+                          <div class="col order-first">
+                            <h4>Address :</h4><br>
+                            <p>South Africa<br>
+                            Cape Town<br>
+                            Lansdowne</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+
+            </div>
+
+    </footer>
+
     <script src="/JS/Admin.js"></script>
 </body>
 
