--- a/Html/checkout.html
+++ b/Html/checkout.html
@@ -48,31 +48,60 @@
         </div>
 </header>
 
-    <body class="bg-dark">
-        <section id="products">
-            <div class="container-fluid">
-                <div class="row d-flex flex-column flex-md-row">
-                    <div loading="lazy" class="img3">
-                        <div class="home-text col">
-                            <h2 id="heading-checkoutpage" class="lead">Checkout</h2>
-                            <h3 class="subheading-checkoutpage">Your Beat, Your Story</h3>
+<body class="bg-dark">
+    <section id="products">
+        <div class="container-fluid">
+            <div class="row d-flex flex-column flex-md-row">
+                <div loading="lazy" class="img3">
+                    <div class="home-text col">
+                        <h2 id="heading-checkoutpage" class="lead">Checkout</h2>
+                        <h3 class="subheading-checkoutpage">Your Beat, Your Story</h3>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+
+
+      <footer>
+
+        <nav class="navbar navbar-expand-lg text-light bg-black ">
+                    <div class="container-fluid">
+                    <div class="container text-center">
+                        <div class="row">
+                          <div class="col order-last " >
+                          <p>&copy; Copyright 2022 | All Rights Reserved.</p><br>
+                
+                          </div>
+                          <div class="col">
+                            <h4>Contact :</h4><br>
+                            <p>
+                                brogybeatstore@gmail.com<br>
+                                Phone no. : 1234567890
+
+
+                            </p>
+                                <i class="fab fa-youtube"></i>
+                              </a>
+                          </div>
+                          <div class="col order-first">
+                            <h4>Address :</h4><br>
+                            <p>South Africa<br>
+                            Cape Town<br>
+                            Lansdowne</p>
+                          </div>
                         </div>
+                      </div>
                     </div>
                 </div>
 
-                <form>
-  <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-  </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2">Another label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-  </div>
-</form>
+            </div>
 
-    <script src="/JS/code.js"></script>
+    </footer>
+
+    <script src="/JS/Admin.js"></script>
 </body>
 
 </html>
+
 
