--- a/Html/product.html
+++ b/Html/product.html
@@ -13,7 +13,7 @@
     <title>My POS Project</title>
 </head>
 <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black mb-2 mb-lg-0 ">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img class="logo" src="https://i.postimg.cc/Ss5Px6Xq/Logo-2.jpg" alt="logo" width="60" height="58">
@@ -24,10 +24,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <ul class="navbar-nav ms-auto ">
                     <li class="nav-item">
 
-                        <a class="nav-link active" aria-current="admin-nav" href="/index.html">
+                        <a class="nav-link active " aria-current="admin-nav" href="/index.html">
                             <i class="fa-sharp fa-solid fa-folder"></i>Home</a>
                     </li>
                     <a class="nav-link active" aria-current="admin-nav" href="/Html/product.html">
@@ -63,7 +63,7 @@
 
             <!-- Beats -->
             <div id="card">
-                <div class="row" id="card-row" >
+                <div class="row " id="card-row" >
                     <div class="col-4 w-100 ">
                         <audio>
                             
@@ -107,6 +107,7 @@
                             <p>South Africa<br>
                             Cape Town<br>
                             Lansdowne</p>
+                            
                           </div>
                         </div>
                       </div>
