--- a/Html/admin.html
+++ b/Html/admin.html
@@ -13,8 +13,9 @@
     <title>My POS Project</title>
 </head>
 <header class="sticky-top">
+    <div class="container-fluid"></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black ">
-        <div class="container-fluid">
+        
             <a class="navbar-brand" href="/index.html">
                 <img class="logo" src="https://i.postimg.cc/Ss5Px6Xq/Logo-2.jpg" alt="logo" width="60" height="58">
             </a>
