--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-black">
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black .bg-transparent ">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">
                     <img class="logo" src="https://i.postimg.cc/Ss5Px6Xq/Logo-2.jpg" alt="logo" width="60" height="55">
