--- a/Html/checkout.html
+++ b/Html/checkout.html
@@ -68,7 +68,7 @@
           <tr>
             <tbody id="tbody-checkout">
             <th>Add to total</th>
-            <th>Image</th>
+            <th>Style</th>
             <th>Product</th>
             <th>Price</th>
             
