--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
     <title>My POS Project</title>
+    <link rel="icon" href="/Assets/Imgs/Logo1.jpg">
 </head>
 <body class="bg-black">
     <header class="sticky-top">
