--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
 
-        <script src="/JS/code.js"></script>
+        <script src="/JS/code.js" defer></script>
         <footer>
 
             <nav class="navbar navbar-expand-lg text-light bg-black ">
