--- a/Html/product.html
+++ b/Html/product.html
@@ -61,19 +61,31 @@
                 </div>
             </div>
 
+                <!-- sort section -->
+                <center>
+                <section class="container-fluid">
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Price
+                </label>
+                <label class="btn btn-secondary">
+                  <input type="radio" name="options" id="option2" autocomplete="off"> Style
+                </label>
+                <label class="btn btn-secondary">
+                  <input type="radio" name="options" id="option3" autocomplete="off"> Product
+                </label>
+              </div>
+            </section>
+        </center>
+
             <!-- Beats -->
             <div id="card">
                 <div class="row " id="card-row" >
+                    
                     <div class="col-4 w-100 ">
                         <audio>
                             
                         </audio>
-
-                    </div>
-                </div>
-            </div>
-                            </div>
-                    </div>
                 </div>
             </div>
         </div>
